@@ -14,7 +14,6 @@ import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class PostServiceImpl implements PostService {
@@ -67,7 +66,7 @@ public class PostServiceImpl implements PostService {
                             post.getLocation().getY(), post.getLocation().getX());
                     return distance <= radius;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -100,7 +99,7 @@ public class PostServiceImpl implements PostService {
                             post.getLocation().getY(), post.getLocation().getX());
                     return distance <= radius;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -115,7 +114,7 @@ public class PostServiceImpl implements PostService {
                             post2.getLocation().getY(), post2.getLocation().getX());
                     return Double.compare(dist1, dist2);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private double calculateDistance(double lat1, double lon1, double lat2, double lon2) {
